tests/sema/fail/v9_fail_str_subscript.ep
# COMPILE_FAIL_CONTAINS: str is read-only; subscript assignment is not allowed
fun main(): void {
    let s = "Epic"
    s[0] = 'e'
}
